more progress - fixed nav and fixing dark mode

--- a/Sass/Sass-Partials/_home.scss
+++ b/Sass/Sass-Partials/_home.scss
@@ -36,7 +36,6 @@
     padding-top: 70px;
     position: relative;
     z-index: 1000;
-    background-color: rgba(255, 255, 255, 0.75);
     height: 100%;
   }
   @keyframes rotatePhoto {
