--- a/Sass/theme-queries.scss
+++ b/Sass/theme-queries.scss
@@ -45,8 +45,9 @@
     bottom: 0;
     top: calc(100vh - 100px);
     width: 100%;
-    height: 200px;
-    display: none;
+    padding: 20px;
+    // height: 200px;
+    // display: none;
     // flex-direction: row;
     // justify-content: space-between;
 
@@ -55,8 +56,11 @@
       display: flex;
       flex-direction: row;
       justify-content: space-between;
-      li {
+      width: 100%;
+      .side-nav-item {
         display: inline-block;
+        padding: 0;
+        height: 100px;
       }
     }
   }
@@ -137,7 +141,7 @@
   }
   .main-overlay {
     .overlay-content-case {
-      width: 95%;
+      width: 96%;
       &-content {
         width: 75%;
       }
@@ -145,7 +149,7 @@
         position: relative;
         color: var(--color-d);
         top: 0;
-        right: -15px;
+        right: -10px;
       }
     }
   }
@@ -236,6 +240,22 @@
       }
     }
   }
+  .side-nav {
+    top: calc(100vh - 85px);
+    padding: 10px;
+    .side-nav-link {
+      .bi {
+        font-size: 20px;
+      }
+      .side-nav-text {
+        font-size: 14px;
+        padding: 0 5px;
+      }
+    }
+    .side-nav-item:nth-child(4) {
+      display: none;
+    }
+  }
   .main-overlay {
     .overlay-content-case {
       .story-banner {
@@ -245,6 +265,16 @@
         .col {
           .card {
             min-height: 300px;
+          }
+        }
+        .story-links {
+          flex-direction: column;
+        }
+        .story-links > * {
+          margin-bottom: 20px;
+          width: 100%;
+          a {
+            width: inherit;
           }
         }
       }
@@ -266,6 +296,9 @@
     margin-left: auto;
     margin-right: auto;
   }
+  .row > * {
+    padding: 0 7px;
+  }
 
   .col-12,
   .col,
@@ -273,6 +306,18 @@
   .col-md-4 {
     padding: 0 7px;
     margin: 10px 0;
+  }
+  .side-nav {
+    top: calc(100vh - 52px);
+    padding: 5px 15px;
+    .side-nav-link {
+      .bi {
+        font-size: 16px;
+      }
+      .side-nav-text {
+        font-size: 11px;
+      }
+    }
   }
   .side-content {
     .seller-content #particlesCase {
@@ -307,7 +352,7 @@
           flex-direction: column;
         }
         .achievement-item {
-          width: 70%;
+          width: 80%;
           margin: 35px auto 0;
           // margin-top: 20px;
         }
@@ -389,18 +434,17 @@
   }
   .main-overlay {
     .overlay-content-case {
+      height: 96vh;
+      margin: 2vh auto;
       &-content {
         width: 100%;
         padding: 7px;
-        .story-banner {
-          height: 270px;
-        }
         .main-story {
           .col {
             padding: 0;
-            .card {
-              min-height: 300px;
-            }
+          }
+          .story-links {
+            margin: 35px 0 0;
           }
         }
       }
@@ -427,6 +471,22 @@
             .slide-up-overlay_slideUp {
               transform: translateY(0);
               transition: transform 0.5s ease;
+            }
+          }
+        }
+      }
+    }
+    .main-overlay {
+      .overlay-content-case {
+        &-content {
+          .story-banner {
+            height: 220px;
+          }
+          .main-story {
+            .col {
+              .card {
+                min-height: 220px;
+              }
             }
           }
         }
